--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,14 @@
-/*
-VitaVis v. 0.9
-Default Stylesheet 
-*/
+/* VitaVis 0.1 */
+
+/* BASICS */
+
+* {
+	text-align:left;
+	font-size: 1em;
+	font-family: "Roboto", Open Sans, Arial, sans-serif;
+	text-shadow: 0 0 1px #F4F4F4;
+	color: #282828;
+}
 
 html {
 	background-image: url(background.jpg);
@@ -9,7 +16,6 @@ html {
 
 body {
 	text-align: center;
-	font-size: 1em;
 	font-family: "Roboto", Open Sans, Arial, sans-serif;
 	font-weight: 300;
 	text-shadow: 0 0 1px #F4F4F4;
@@ -64,6 +70,18 @@ h3 {
 	margin-bottom: 25px;
 }
 
+h3 a i {
+	color: #0F5D8D;
+	text-shadow: 0 0 0px;
+	font-size: 1.2em;
+}
+
+h3 a:hover i {
+	color: rgb(252,252,252);
+	background-color: #0F5D8D;
+	text-shadow: 0 0 0px;
+}
+
 #right h3 {
 	border-bottom: 0px;
 }
@@ -72,6 +90,28 @@ h4 {
 	font-family: "Roboto", Open Sans, Arial, sans-serif;
 	font-weight: 700;
 	font-size: 1em;
+}
+
+#left .h-left {
+	width: 310px;
+	text-align: left;
+}
+
+#left .h-right {
+	width: 310px;
+	text-align: right;
+	float: right;
+}
+
+#right .h-left {
+	width: 165px;
+	text-align: left;
+}
+
+#right .h-right {
+	width: 165px;
+	text-align: right;
+	float: right;
 }
 
 a:link, a:visited, a:focus {
@@ -96,6 +136,7 @@ section {
 .entry {
 	margin-bottom: 25px;
 	width: 620px;
+	font-family: "Roboto";
 }
 
 .entry:hover {
@@ -110,6 +151,7 @@ section {
 .specs {
 	width: 460px;
 	margin-left: 160px;
+	/* float: left;  */
 }
 
 .employer {
@@ -122,7 +164,6 @@ section {
 
 .description {
 }
-
 
 /* RIGHT COLUMN */
 
@@ -142,22 +183,20 @@ section {
 	display: table-cell;
 	width: 20px;
 	padding-right: 6px;
-	padding-bottom: 5px;
+	padding-bottom: 0px;
 }
 
 .tabular-content {
 	display: table-cell;
-	padding-bottom: 5px;
+	padding-bottom: 0px;
 }
 
 #wrapper-footer {
-	width: 100%;
+	width: 990px;
+	height: 30px;
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
-	height: 30px;
-	margin-bottom: 30px;
-	margin-top: 30px;
+	text-align: left;
 	float: right;
 }
 
@@ -167,33 +206,36 @@ footer {
 	margin-bottom: 30px;
 }
 
-
-/* BOOTSTRAP */
+/* BARS */
 
 .progress {
-  height: 18px;
-  margin-top: 18px;
-  margin-bottom: 18px;
-  background-color: rgb(180,180,180);
+	height: 19px;
+	margin-top: 19px;
+	margin-bottom: 19px;
+	background-color: rgb(180,180,180);
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 
 .progress-bar {
-  float: left;
-  height: 100%;
-  background-color: rgb(120,120,120); 
+	float: left;
+	height: 100%;
+	background-color: rgb(120,120,120);
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 
 .progress-bar-label {
-	height: 18px;
+	height: 19px;
 	line-height: 18px;
 	margin-left: 2px;
-	font-size: 0.8em;
+	font-size: 0.7em;
+	padding-left: 3px;
+	padding-bottom: 1px;
 	color: white;
 	text-shadow: 0 0 0px;
+	text-align: left;
 }
-
-/* Scales and progress bars based on Bootstrap */
-/* http://getbootstrap.com/2.3.2/components.html#progress */
 
 .scale {
 	margin-top: -10px;
@@ -221,8 +263,8 @@ footer {
 	padding-right: 3px;
 }
 
-.scale-progress {
-	height: 23px;
+.progress-right {
+	height: 23px;	/* 20px for png */
 	margin-top: 20px;
 	margin-bottom: 20px;
 	background-image: url(bar-bg.png);
@@ -230,18 +272,21 @@ footer {
 	background-position: bottom;
 }
 
-.scale-progress-bar {
-	float: left;
-	height: 100%;
-	font-size: 16px;
-	color: #282828;
-	text-shadow: 0 0 1px rgb(130,130,130);
-	background-color: transparent;
+.progress-bar-right {
+  float: left;
+  height: 100%;
+  font-size: 16px;
+  color: #282828;
+  text-shadow: 0 0 1px rgb(130,130,130);
+  background-color: transparent;
 }
 
-
-/* Pure CSS Timeline based on a piece by Matt Bango */
+/* PURE CSS TIMELINE INSPIRED BY MATT BANGO */
 /* http://mattbango.com/notebook/code/pure-css-timeline */
+
+.timeline {
+	margin-top: -50px;
+}
 
 ul.events {
     list-style-type: none;
@@ -251,22 +296,34 @@ ul.events {
 
 ul.events li {
     border-bottom: 1px solid #999;
-    color: #999;
-    font-size: 0.8em;
-    margin-bottom: 4px;
+    color: transparent;
+    font-size: 0.7em;
+    margin-bottom: 8px;
     padding: 1px 0px 2px;
     position: relative;
+	white-space: nowrap;
     text-align: left;
 	line-height: 100%;
 }
 
 ul.events li a {
-	color: transparent;
+    color: #aaa;
+    color: transparent;
 }
 
 ul.events li a:hover {
     color: #999;
 	background: transparent;
+}
+
+.timeline-event a {
+	width: 100%; 
+	display: block;
+}
+
+.inline-block {
+	display: inline-block;
+	margin-right: 1px;
 }
 
 ul.intervals {
@@ -276,7 +333,8 @@ ul.intervals {
 	margin: 0;
 }
 
-/* The width depends on the number of intervals. For example 100 / 7 = 14.29% -- then subtract a little bit for room for the borders */
+/* Width depends on the number of intervals. Example: 100 / 7 = 14.29% */
+
 ul.intervals li {
     border-right: 1px solid #ddd;
     color: #888;
@@ -289,4 +347,22 @@ ul.intervals li {
 
 ul.intervals li.last {
     border-right: 0px;
+}
+
+/* Bootstrap Addenda */
+
+.collapse {
+	display: none;
+}
+
+.collapse.in {
+	display: block;
+}
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height 0.35s ease;
+          transition: height 0.35s ease;
 }
